<resources>
    <string name="app_name">OfflineQuiz</string>
    <string name="Correct">\"Correct: \"</string>
    <string name="Incorrect">\"Incorrect: \"</string>
    <string name="correct">correct</string>
    <string name="incorrect">incorrect</string>
    <string name="todo">TODO</string>
    <string name="choose_topic">Choose Topic</string>
    <string name="javalogo">javalogo</string>
    <string name="java">Java</string>
    <string name="andoridlogo">andoridlogo</string>
    <string name="android">android</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="imageofbackbtn">imageofbackbtn</string>
    <string name="selected_topic_name">Selected Topic Name</string>
    <string name="_00_59">00:59</string>
    <string name="_1_10">1/10</string>
    <string name="question_will_came_here">Question Will Came Here..</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">Next</string>
    <string name="congralutationlogo">Congralutationlogo</string>
    <string name="you_ve_successfully_completed_a_quiz">You\'ve Successfully Completed a quiz</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="correct_answer_0">Correct Answer : 0</string>
    <string name="wrong_answers_0">Wrong Answers : 0</string>
    <string name="submit">Submit Quiz</string>
</resources>