<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/ivQuizIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="110dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/quiz_icon" />

    <TextView
        android:id="@+id/tvChooseTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivQuizIcon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_topic"
        android:textColor="@color/topicColor" />

    <LinearLayout
        android:id="@+id/topicContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChooseTopic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/javalayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/java_logo"
                android:contentDescription="@string/javalogo" />

            <TextView
                android:id="@+id/tvJava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/java"
                android:textColor="@color/tvJavaColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/androidlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/android_logo"
                android:contentDescription="@string/andoridlogo" />

            <TextView
                android:id="@+id/tvAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/android"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/tvAndroidColor"/>


        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topicContainer"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_green20"
        android:text="@string/start_quiz"
        android:textColor="@color/btnStartQuizColor"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>





