<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quizBackground"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <ImageView
        android:id="@+id/ivSymbolBack"
        android:minWidth="49dp"
        android:minHeight="31dp"
        android:layout_height="31dp"
        android:layout_width="49dp"
        android:layout_centerVertical="true"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageofbackbtn" />

    <TextView
        android:id="@+id/tvTopicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/selected_topic_name"
        android:textColor="@color/topic_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivSymbolBack"
        app:layout_constraintEnd_toStartOf="@+id/tvTimer"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/ivSymbolBack"
        app:layout_constraintTop_toTopOf="@+id/ivSymbolBack"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_00_59"
        android:textColor="@color/timercolor"
        app:layout_constraintBottom_toTopOf="@+id/tvNumberofQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTopicName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvNumberofQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_back_white10"
        android:elevation="1dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/_1_10"
        app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopicName" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/round_back_light_yellow10"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="@string/question_will_came_here"
        android:textColor="@color/question_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/tvTopicName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOption1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/option_1"
        android:textAllCaps="false"
        android:textColor="@color/option1_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        app:layout_constraintVertical_bias="0.158" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOption2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/option_2"
        android:textAllCaps="false"
        android:textColor="@color/option2_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/btnOption1"
        app:layout_constraintVertical_bias="0.083" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOption3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/option_3"
        android:textAllCaps="false"
        android:textColor="@color/option3_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/btnOption2"
        app:layout_constraintVertical_bias="0.102" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOption4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/option_4"
        android:textAllCaps="false"
        android:textColor="@color/option4_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/btnOption3"
        app:layout_constraintVertical_bias="0.12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back_green20"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/nextbutton_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/btnOption4"
        app:layout_constraintVertical_bias="0.358" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>